# sdl2_3d_software_renderer

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: array.c  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  swap.h  texture.c  texture.h  triangle.c  triangle.h  upng.c  vector.c  vector.h
